# FurManager-3.0

./: .env.example  .gitignore  Makefile  alembic.ini  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2025-06-15T15-18-52da13796272_auto_generated_migration.py  2025-06-15T21-25-6c43b01601f2_auto_generated_migration.py  2025-06-15T22-11-293a2a5d3b77_initial.py  2025-06-21T19-35-4e5d938d124d_add_created_updated_at.py  2025-12-24T15-17-9bed1e128633_add_user_model.py  2025-12-24T16-01-facc64635826_add_relationship_user_channel.py  2025-12-24T16-59-2bf89298285e_add_channel_config.py  2025-12-24T17-10-add_channel_config_fks.py  2025-12-25T22-27-6eb7ddb787df_auto_generated_migration.py
docker/local/: Dockerfile  compose.yml
src/: main.py
src/bot/callbacks/: channel.py  common.py
src/bot/di/: bot.py
src/bot/markup/channel/: configure.py  delete.py  paginator.py
src/bot/markup/common/: paginator.py
src/bot/router/channel/: configure.py  delete.py  list.py  register.py
src/bot/router/common/: basic.py
src/bot/router/image/: receive.py
src/config/: base.py  bot.py  database.py  redis.py
src/core/di/orm/handlers/: channel.py  channel_config.py  user.py
src/core/di/repositories/: base.py
src/core/di/repositories/redis/: bot.py
src/core/models/: base.py
src/core/models/channel/: entity.py
src/core/models/channel_config/: entity.py
src/core/models/user/: entity.py
src/core/orm/: core.py
src/core/orm/filters/: base.py  channel.py  channel_config.py  user.py
src/core/orm/handlers/: channel.py  channel_config.py  user.py
src/core/orm/models/: __init__.py  channel.py  channel_config.py  user.py
src/core/orm/schemas/: base.py  channel.py  channel_config.py  user.py
src/core/orm/sorters/: base.py  channel.py  channel_config.py  user.py
src/core/repositories/: base.py
src/core/repositories/orm/: base.py  channel.py  channel_config.py  user.py
src/core/repositories/redis/bot/: channels.py
src/core/services/: base.py
src/core/services/database/: channel.py  channel_config.py  user.py
src/di/: redis.py
src/router/common/: basic.py
src/utils/enums/: exception.py  sort.py
src/utils/enums/router/: commands.py  states.py
src/utils/exceptions/: base.py
src/utils/exceptions/database/: orm.py
src/utils/interfaces/: handler.py
src/utils/interfaces/database/: repository.py  unit_of_work.py
src/utils/tools/: bot.py
src/utils/transforms/orm/: channel.py  channel_config.py  user.py
src/utils/types/: transform_types.py  type_variables.py
src/utils/validators/: telegram.py
