[project]
name = "FurManager"
version = "0.1.0"
description = "FurManager is a Telegram bot for channels autoposting and management."
authors = [
    { name = "Andrii Borychevskyi", email = "a.borychevskyi@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14.0"
dependencies = ["aiogram (>=3.20.0.post0,<4.0.0)", "pydantic (>=2.11.5,<3.0.0)", "loguru (>=0.7.3,<0.8.0)", "pydantic-settings (>=2.9.1,<3.0.0)", "dishka (>=1.6.0,<2.0.0)", "aiogram-dialog (>=2.3.1,<3.0.0)", "redis (>=6.2.0,<7.0.0)"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.11.13"
mypy = "^1.16.0"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["alembic", "venv", ".venv", "tests", "modules"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
check_untyped_defs = true
explicit_package_bases = true
mypy_path = "."
exclude = "(^alembic/|^venv/|^\\.venv/|^tests/|^modules/)"
follow_imports = "silent"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["untyped_package.*"]
follow_untyped_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
